2000-11-06  Lars Wirzenius  <liw@iki.fi>

	* README, doc/userguide/userguide.xml: Moved information on how
	to use configure from README to User Guide.

2000-11-06  Lars Wirzenius  <liw@iki.fi>

    	* Bearerbox converted to use with ne HTTP server API, with help
	from Kalle Marjola.

	* gw/bb_http.c: Only use one thread to handle HTTP requests.
	Added function httpadmin_stop to help with shutdown
	synchronization issues.
	
	* gw/bearerbox.[ch]: In signal handler, call bb_shutdown, instead
	of set_shutdown_status. This point may need to be implemented
	better later. Call httpadmin_stop in main.
	
	* gwlib/http.c: Have http_close_all_server kill the server threads
	as well, including killing the FDSet poller thread.

2000-11-06  Kalle Marjola  <rpr@wapit.com>

	* gw/smsc_emi.c (emi_open_ip): check if allow_ip set. Thanks for
	Juho-Pekka Virolainen for noticing this.

2000-11-06  Yann Muller <ymuller@3glab.com>

	* gw/smsc_at.c: fixed Premicell bug. Added sleep(1) for nokiaphone.

2000-11-05  Richard Braakman  <dark@wapit.com>

	* gwlib/http.c: Make the interface of client_read_body() match the
	rest of the design.  This makes the http module work with HTTP/1.1
	servers again.

2000-11-03  Tuomas Luttinen  <tuo@wapit.com>

	* gw/wml_compiler.c: A conformance patch: card and template elements 
	cannot have 2 or more do elements of the same name, PI are ignored,
	unknown tags and CDATA are now processed. Also some code was cleaned 
	into the new coding standard.

2000-11-03  Richard Braakman  <dark@wapit.com>

        * gw/wsp_headers.c: If an Expires header has an invalid date, then
        encode it as a date far in the past.  We can't just skip the header
        because RFC2068 says such a response should be treated as already
        expired, and we have to tell the client to do that.

        * gw/wsp_headers.c: Make sure that a Multi-octet-integer is always
        at least one octet long, even if its value is 0.
      
2000-11-03  Kalle Marjola  <rpr@wapit.com>