@@ -151,6 +151,27 @@ docs) echo Documentation will be built as well. ;;
 esac
 
 
+dnl Implement the --enable-pam option.
+
+AC_ARG_ENABLE(pam,
+[  --enable-pam	enable pam authentication
+  --disable-pam	disable pam authentication ], [
+    if test "$enableval" = "yes"
+    then
+	AC_CHECK_LIB(pam, pam_end)
+	AC_CHECK_LIB(dl,main)
+	AC_CHECK_HEADERS(security/pam_appl.h)
+	PAMTARGET="pam"
+    else
+	PAMTARGET="no-pam"
+    fi
+])
+case "$PAMTARGET" in
+no-pam) echo pam authentication is disabled. ;;
+pam) echo pam authetication is enabled. ;;
+esac
+
+
 dnl Implement --enable-debug option.
 
 AC_ARG_ENABLE(debug,
